--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -14,6 +14,16 @@
 #   TOUCH'MI           #
 #                      #
 ########################
+[gcode_macro MOVE_Z_UP]
+variable_upz: 0
+gcode:
+    {% if upz == 0 %}
+	SET_KINEMATIC_POSITION Z=0
+	G90
+        G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
+	SET_GCODE_VARIABLE MACRO=MOVE_Z_UP VARIABLE=upz VALUE=1
+    {% endif %}
+
 [gcode_macro G28]
 rename_existing: G999928
 gcode:
@@ -21,11 +31,13 @@ gcode:
     {% set do_y = 0 %}
     {% set do_z = 0 %}
     {% if params.X is defined %}
+         MOVE_Z_UP
          HOME_X
     {% else %}
         {% set do_x = 1 %} 
     {% endif %}
     {% if params.Y is defined %}
+         MOVE_Z_UP
          HOME_Y
     {% else %}
          {% set do_y = 1 %} 
@@ -36,6 +48,7 @@ gcode:
         {% set do_z = 1 %} 
     {% endif %}
     {% if do_x == 1 and do_y == 1 and do_z == 1 %}
+         MOVE_Z_UP
          HOME_ALL
     {% endif %}
 
@@ -102,8 +115,10 @@ gcode:
         HOME_Y
         {% endif %}
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int} F3600
+    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
     G1 Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_pos|int} F3600
+    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int} F3600
+    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
     M400
     {% endif %}
 
@@ -248,7 +263,9 @@ gcode:
     # retract the filament a bit before lifting the nozzle to release some of the pressure
     G1 E-1 F300
     # move Z up a bit and retract filament even more
-    G1 Z+5 E-2 X-20 Y-20 F9000
+    G1 Z+5 E-2 F9000 
+    G90
+    G1 X10 Y10 F9000
     {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int ==1 %}
     M702
     GO_TO_PARKING_OUT
