--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -100,7 +100,8 @@ homing_retract_dist: 0
 ## IR extruder switch
 [filament_switch_sensor ir_sensor]
 pause_on_runout: False
-switch_pin: ^P1.28 # P1.28 for X-max on printer board
+#switch_pin: ^P1.28 # P1.28 for X-max on printer board
+switch_pin: ^!P1.28 # P1.28 for X-max on printer board
 event_delay:0.1
 runout_gcode:
     M117 Filament not in extruder
