--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -3,6 +3,10 @@
 ###########################################################################
 ###########################################################################
 
+[temperature_sensor rpi]
+sensor_type: rpi_temperature
+
+
 ########################
 #
 # MACROS
