--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -58,13 +58,13 @@ gcode:
 
 [gcode_macro HOME_X]
 gcode:
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
+    #SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
+    #SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
     G4 P1000
     G999928 X0
     G4 P2000
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
+    #SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
+    #SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
     G4 P1000
     G91
     {% if printer.configfile.config["stepper_x"]["position_endstop"]|int < 30 %}
@@ -75,13 +75,13 @@ gcode:
 
 [gcode_macro HOME_Y]
 gcode:
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
+    #SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
+    #SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
     G4 P1000
     G999928 Y0
     G4 P2000
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
+    #SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_x"]["hold_current"]}
+    #SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
     G4 P1000
     G91
     {% if printer.configfile.config["stepper_y"]["position_endstop"]|int < 10 %}
