--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -4,7 +4,7 @@
 ###########################################################################
 
 [temperature_sensor rpi]
-sensor_type: rpi_temperature
+sensor_type: temperature_host
 
 
 ########################
@@ -184,9 +184,9 @@ gcode:
 # START_PRINT and END_PRINT.
 
 [gcode_macro START_PRINT]
-default_parameter_BED_TEMP: 60
-default_parameter_EXTRUDER_TEMP: 250
-default_parameter_LOAD: -1
+variable_BED_TEMP: 60
+variable_EXTRUDER_TEMP: 250
+variable_LOAD: -1
 gcode:
     {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int ==1 %}
     SET_SERVO SERVO=purge_servo angle=0
@@ -326,9 +326,9 @@ gcode:
 [pause_resume]
 
 [gcode_macro PAUSE_PRINT]
-default_parameter_X: 10
-default_parameter_Y: 10
-default_parameter_Z: 10
+variable_X: 10
+variable_Y: 10
+variable_Z: 10
 gcode:
     SAVE_GCODE_STATE NAME=PAUSE_state
     PAUSE
@@ -346,7 +346,7 @@ gcode:
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
 
 [gcode_macro M600]
-default_parameter_Z: 10
+variable_Z: 10
 gcode:
     SAVE_GCODE_STATE NAME=M600_state
     PAUSE
@@ -370,7 +370,7 @@ gcode:
     RESTORE_GCODE_STATE NAME=M600_state MOVE=1
 
 [gcode_macro EJECT_FILAMENT]
-default_parameter_LENGTH_MAX: 100
+variable_LENGTH_MAX: 100
 gcode:
     G91
     M83
@@ -396,7 +396,7 @@ gcode:
     G90
 
 [gcode_macro CHANGE_EJECT]
-default_parameter_TEMP: 235
+variable_TEMP: 235
 gcode:
     G28
     G90
@@ -406,7 +406,7 @@ gcode:
     M104 S0 T0
 
 [gcode_macro INSERT_FILAMENT]
-default_parameter_LENGTH_MAX: 100
+variable_LENGTH_MAX: 100
 gcode:
     G91
     M83
@@ -426,7 +426,7 @@ gcode:
     G90
 
 [gcode_macro CHANGE_INSERT]
-default_parameter_TEMP: 235
+variable_TEMP: 235
 gcode:
     G28
     G90
@@ -443,7 +443,7 @@ gcode:
 ##################################
 ##################################
 [gcode_macro SPEED_TEST]
-default_parameter_SPEED: 2000
+variable_SPEED: 2000
 gcode:
     HOME_X
     HOME_Y
