--- a/printer-mainsail.cfg
+++ b/printer-mainsail.cfg
@@ -9,7 +9,7 @@ verbose: false
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
-default_parameter_Z: 10
+variable_Z: 10
 gcode:
     M104 S0
     M140 S0
