--- a/vam8-direct/printer.cfg
+++ b/vam8-direct/printer.cfg
@@ -14,7 +14,9 @@
 step_pin: P2.1
 dir_pin: !P0.11
 enable_pin: !P0.10
-step_distance: .00625
+#step_distance: .00625
+rotation_distance: 40
+microsteps: 32
 endstop_pin: ^!P1.24
 position_endstop: -8
 position_min: -8
@@ -25,7 +27,9 @@ homing_speed: 70
 step_pin: P2.2
 dir_pin: !P0.20
 enable_pin: !P0.19
-step_distance: .005
+#step_distance: .005
+rotation_distance: 32
+microsteps: 32
 endstop_pin: ^!P1.26
 position_endstop: -38
 position_min: -38
@@ -36,7 +40,9 @@ homing_speed: 70
 step_pin: P2.3
 dir_pin: !P0.22
 enable_pin: !P0.21
-step_distance: .00125
+#step_distance: .00125
+rotation_distance: 8
+microsteps: 32
 endstop_pin: probe:z_virtual_endstop
 position_min: -5
 position_max: 210
@@ -44,7 +50,6 @@ homing_speed: 5
 
 [tmc2209 stepper_x]
 uart_pin: P1.1
-microsteps: 32
 run_current: 1.0
 hold_current: 0.6
 interpolate: True
@@ -53,7 +58,6 @@ stealthchop_threshold: 250
 
 [tmc2209 stepper_y]
 uart_pin: P1.4
-microsteps: 32
 run_current: 1.0
 hold_current: 0.6
 interpolate: True
@@ -62,7 +66,6 @@ stealthchop_threshold: 250
 
 [tmc2208 stepper_z]
 uart_pin: P1.10
-microsteps: 32
 run_current: 0.8
 hold_current: .6
 interpolate: True
@@ -78,8 +81,9 @@ sense_resistor: 0.110
 step_pin: P2.8
 dir_pin: P2.13
 enable_pin: !P4.29
-step_distance: .00125
-#step_distance: .0025
+#step_distance: .00125
+rotation_distance: 8
+microsteps: 32
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 max_extrude_only_distance: 100.0
@@ -100,7 +104,6 @@ cs_pin: P1.14
 spi_software_sclk_pin: P1.9
 spi_software_mosi_pin: P1.8
 spi_software_miso_pin: P1.0
-microsteps: 32
 run_current: .55
 hold_current: .3
 #microsteps: 8
@@ -150,7 +153,7 @@ fan_speed: 1.0
 ##################################
 
 [virtual_sdcard]
-path: ~/.octoprint/uploads/
+path: ~/gcode_files
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_0810001687242EAFB66B575BC32000F5-if00
