--- a/vam8-bowden/printer-mosquito.cfg
+++ b/vam8-bowden/printer-mosquito.cfg
@@ -15,7 +15,9 @@ step_pin: P2.1
 dir_pin: P0.11
 enable_pin: !P0.10
 #step_distance: .01
-step_distance: .00625
+#step_distance: .00625
+microsteps: 32
+rotation_distance: 40
 #endstop_pin: ^P1.24
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: -21
@@ -30,7 +32,9 @@ dir_pin: !P0.20
 enable_pin: !P0.19
 #step_distance: .01
 #step_distance: .005
-step_distance: .00625
+#step_distance: .00625
+microsteps: 32
+rotation_distance: 40
 #endstop_pin: ^P1.26
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: -28
@@ -43,7 +47,9 @@ homing_retract_dist: 0
 step_pin: P2.3
 dir_pin: P0.22
 enable_pin: !P0.21
-step_distance: .00125
+#step_distance: .00125
+microsteps: 32
+rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_min: -3
 position_max: 210
@@ -53,11 +59,12 @@ homing_speed: 5
 step_pin: P2.0
 dir_pin: !P0.5
 enable_pin: !P0.4
-step_distance: .00125
+#step_distance: .00125
+microsteps: 32
+rotation_distance: 8
 
 [tmc2209 stepper_x]
 uart_pin: P1.1
-microsteps: 32
 run_current: 1.0
 hold_current: .6
 interpolate: True
@@ -95,7 +102,6 @@ stealthchop_threshold: 250
 
 [tmc2209 stepper_y]
 uart_pin: P1.4
-microsteps: 32
 run_current: 1.0
 hold_current: .6
 interpolate: True
@@ -110,7 +116,6 @@ stealthchop_threshold: 250
 [tmc2208 stepper_z]
 uart_pin: P1.10
 #microsteps: 8
-microsteps: 32
 run_current: .8
 hold_current: .8
 interpolate: True
@@ -123,7 +128,6 @@ sense_resistor: 0.110
 [tmc2208 stepper_z1]
 uart_pin: P1.14
 #microsteps: 8
-microsteps: 32
 run_current: .8
 hold_current: .8
 interpolate: True
@@ -142,7 +146,6 @@ sense_resistor: 0.110
 [tmc2209 extruder]
 uart_pin: P1.17
 #microsteps: 8
-microsteps: 16
 run_current: 1.0
 hold_current: 0.8
 interpolate: True
@@ -165,11 +168,9 @@ sense_resistor: 0.110
 step_pin: P2.8
 dir_pin: P2.13
 enable_pin: !P4.29
-#step_distance: .0022
-#step_distance: .0024
-#step_distance: .0012
-step_distance: 0.00211416
-#step_distance: 0.00422832
+#step_distance: 0.00211416
+microsteps: 16
+rotation_distance: 6.765312
 nozzle_diameter: 0.800
 filament_diameter: 1.750
 max_extrude_only_distance: 150.0
@@ -306,7 +307,7 @@ value: 0
 pin: P1.29
 x_offset: 49
 y_offset: 25
-z_offset: 2.80
+z_offset: 2.40
 
 [bed_mesh]
 speed: 100
