--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -13,7 +13,7 @@
 
 [gcode_macro ACTIVATE_EXTRUDER]
 rename_existing: OACTIVATE_EXTRUDER
-default_parameter_EXTRUDER: extruder
+variable_EXTRUDER: "extruder"
 gcode:
      M118 Set extruder : {EXTRUDER}
 
@@ -71,9 +71,9 @@ gcode:
     M118 Filament 4    : {printer["gcode_macro VAR_MMU2S"].t4_purge_unload_length}mm / {printer["gcode_macro VAR_MMU2S"].t4_purge_load_length}mm
 
 [gcode_macro SET_PURGE_LENGTH]
-default_parameter_FILAMENT: 0
-default_parameter_UNLOAD: 0
-default_parameter_LOAD: 40
+variable_FILAMENT: 0
+variable_UNLOAD: 0
+variable_LOAD: 40
 gcode:
     M118 Set filament {FILAMENT} purge length {UNLOAD}/{LOAD}
     {%if FILAMENT|int == 0 %}
@@ -99,7 +99,7 @@ gcode:
     PURGE_STATUS
 
 [gcode_macro SET_PURGE_SPEED]
-default_parameter_SPEED: 374
+variable_SPEED: 374
 gcode:
     M118 Set purge speed at {SPEED} mm/min
     SET_GCODE_VARIABLE MACRO=VAR_MMU2S VARIABLE=purge_speed VALUE={SPEED}
@@ -394,8 +394,8 @@ gcode:
     SET_GCODE_VARIABLE  MACRO=DEPLOY_PURGE VARIABLE=z_lifted VALUE=-1
 
 [gcode_macro MOVE_PURGE_FILAMENT]
-default_parameter_PURGE_LENGTH: 60
-default_parameter_PURGE_MAX: 60
+variable_PURGE_LENGTH: 60
+variable_PURGE_MAX: 60
 gcode:
     {% if printer["gcode_macro VAR_MMU2S"].enable_purge_servo == 1 %}
     M118 Purging : {PURGE_LENGTH|int} mm
@@ -865,6 +865,43 @@ gcode:
 # Verify the state of the PINDA or the IR sensor
 #
 ############################################
+
+[gcode_macro VERIFY_FILAMENT_IN_EXTRUDER]
+variable_is_loaded: 0
+gcode:
+    {% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+	SET_GCODE_VARIABLE MACRO=VERIFY_FILAMENT_IN_EXTRUDER VARIABLE=is_loaded  VALUE={is_loaded|int + 1}
+    {% endif %}
+    G92 E0
+    G1 E0.2 F200
+    M400
+
+[gcode_macro LOOP_FILAMENT_IN_EXTRUDER]
+variable_nb_check: 8
+gcode:
+    SET_GCODE_VARIABLE MACRO=VERIFY_FILAMENT_IN_EXTRUDER VARIABLE=is_loaded  VALUE=0
+    {% for i in range(nb_check|int) %}
+        VERIFY_FILAMENT_IN_EXTRUDER
+    {% endfor %}
+
+[gcode_macro COMPUTE_FILAMENT_IN_EXTRUDER]
+variable_ir_loaded: 0
+variable_nb_check_valid: 6
+gcode:
+    {% if printer["gcode_macro VERIFY_FILAMENT_IN_EXTRUDER"].is_loaded|int > nb_check_valid|int %}
+        SET_GCODE_VARIABLE MACRO=COMPUTE_FILAMENT_IN_EXTRUDER  VARIABLE=ir_loaded  VALUE=1
+    {% else %}
+        SET_GCODE_VARIABLE MACRO=COMPUTE_FILAMENT_IN_EXTRUDER  VARIABLE=ir_loaded  VALUE=0
+    {% endif %}
+
+[gcode_macro CHECK_FILAMENT_IN_EXTRUDER]
+gcode:
+	LOOP_FILAMENT_IN_EXTRUDER
+	COMPUTE_FILAMENT_IN_EXTRUDER
+
+[gcode_macro DEBUG_FILAMENT_IN_EXTRUDER]
+gcode:
+	M118 Loaded : {printer["gcode_macro COMPUTE_FILAMENT_IN_EXTRUDER"].ir_loaded|int} ({printer["gcode_macro VERIFY_FILAMENT_IN_EXTRUDER"].is_loaded|int}/{printer["gcode_macro COMPUTE_FILAMENT_IN_EXTRUDER"].nb_check_valid|int})
 
 # Call PAUSE_MMU if the filament is not detected by the IR sensor
 [gcode_macro IS_FILAMENT_IN_EXTRUDER]
