--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -24,7 +24,6 @@ default_type: command
 # E0 : MMU2S 5mm road with the 5 gears
 [tmc2208 manual_stepper gear_stepper]
 uart_pin: mmboard:PC14
-microsteps: 16
 run_current: 1.000
 hold_current: 0.600
 interpolate: True
@@ -38,7 +37,9 @@ enable_pin: !mmboard:PC4
 # 140 : mk8 gear
 #step_distance: .007142
 # 165 : fystec gear for mmu2s
-step_distance: .00606
+#step_distance: .00606
+microsteps: 16
+rotation_distance: 19.392
 velocity: 40
 accel: 1500 # same value that your printer accel
 #endstop_pin: ^mmboard:PC2 # PINDA X-
@@ -47,7 +48,6 @@ accel: 1500 # same value that your printer accel
 # Y : MMU2S idler with the 5 ball bearings
 [tmc2209 manual_stepper idler_stepper]
 uart_pin: mmboard:PB7
-microsteps: 16
 run_current: 0.800
 hold_current: 0.800
 interpolate: True
@@ -62,7 +62,9 @@ step_pin: mmboard:PB13
 dir_pin: mmboard:PB14
 enable_pin: !mmboard:PB12
 # 25 step/mm
-step_distance: .04
+#step_distance: .04
+microsteps: 16
+rotation_distance: 128
 velocity: 100
 accel: 500
 # comment this two line if you don't use sensorless
