--- a/vking/printer-mmu2s-config.cfg
+++ b/vking/printer-mmu2s-config.cfg
@@ -46,7 +46,7 @@ variable_idler = [5,20,35,50,65]
 variable_idler_home_position: 85
 variable_pause_x: 125
 variable_pause_x_out: 0
-variable_pause_y: -10
+variable_pause_y: -15
 variable_pause_y_out: 20
 variable_pause_z: 10
 variable_min_temp_extruder: 180
@@ -83,4 +83,18 @@ gcode:
 #  PARAMETER TO ADAPT TO YOUR SETUP
 #
 ################################
+
+[gcode_macro MMU_MANUAL_STEPPER]
+gcode:
+    {%set p=[] %}
+    {% for key in params %}
+        {% set p = p.append(key + '=' + params[key])  %}
+    {% endfor %}
+    {% if printer["gcode_macro VAR_MMU2S"].btt_mmu == 1 %}
+#       M400
+        MMU_MOVE_STEPPER { p|join(" ") }
+#       M400
+   {% else %}
+        MANUAL_STEPPER { p|join(" ") }
+   {% endif %}
 
