--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -184,10 +184,10 @@ gcode:
 # START_PRINT and END_PRINT.
 
 [gcode_macro START_PRINT]
-variable_BED_TEMP: 60
-variable_EXTRUDER_TEMP: 250
-variable_LOAD: -1
 gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
+    {% set LOAD = params.LOAD|default(-1)|int %}
     {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int ==1 %}
     SET_SERVO SERVO=purge_servo angle=0
     {% endif %}
@@ -330,6 +330,9 @@ variable_X: 10
 variable_Y: 10
 variable_Z: 10
 gcode:
+    {% set X = params.X|default(10)|int %}
+    {% set Y = params.Y|default(10)|int %}
+    {% set Z = params.Z|default(10)|int %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     PAUSE
     G91
@@ -346,8 +349,8 @@ gcode:
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
 
 [gcode_macro M600]
-variable_Z: 10
 gcode:
+    {% set Z = params.Z|default(10)|int %}
     SAVE_GCODE_STATE NAME=M600_state
     PAUSE
     G91
@@ -370,8 +373,8 @@ gcode:
     RESTORE_GCODE_STATE NAME=M600_state MOVE=1
 
 [gcode_macro EJECT_FILAMENT]
-variable_LENGTH_MAX: 100
 gcode:
+    {% set LENGTH_MAX = params.LENGTH_MAX|default(100)|int %}
     G91
     M83
     bip
@@ -396,8 +399,8 @@ gcode:
     G90
 
 [gcode_macro CHANGE_EJECT]
-variable_TEMP: 235
 gcode:
+    {% set TEMP = params.TEMP|default(235)|float %}
     G28
     G90
     G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
@@ -406,8 +409,8 @@ gcode:
     M104 S0 T0
 
 [gcode_macro INSERT_FILAMENT]
-variable_LENGTH_MAX: 100
 gcode:
+    {% set LENGTH_MAX = params.LENGTH_MAX|default(100)|int %}
     G91
     M83
     {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
@@ -426,8 +429,8 @@ gcode:
     G90
 
 [gcode_macro CHANGE_INSERT]
-variable_TEMP: 235
 gcode:
+    {% set TEMP = params.TEMP|default(235)|float %}
     G28
     G90
     G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
@@ -443,8 +446,8 @@ gcode:
 ##################################
 ##################################
 [gcode_macro SPEED_TEST]
-variable_SPEED: 2000
 gcode:
+    {% set SPEED = params.TEMP|default(2000)|int %}
     HOME_X
     HOME_Y
     G90
