--- a/printer-mainsail.cfg
+++ b/printer-mainsail.cfg
@@ -11,6 +11,7 @@ verbose: false
 rename_existing: BASE_CANCEL_PRINT
 variable_Z: 10
 gcode:
+    {% set Z = params.Z|default(10)|float %}
     M104 S0
     M140 S0
     M141 S0
