--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -13,9 +13,9 @@
 
 [gcode_macro ACTIVATE_EXTRUDER]
 rename_existing: OACTIVATE_EXTRUDER
-variable_EXTRUDER: "extruder"
+variable_extruder: "extruder"
 gcode:
-     M118 Set extruder : {EXTRUDER}
+     M118 Set extruder : {extruder}
 
 ###############################
 ###############################
@@ -71,10 +71,10 @@ gcode:
     M118 Filament 4    : {printer["gcode_macro VAR_MMU2S"].t4_purge_unload_length}mm / {printer["gcode_macro VAR_MMU2S"].t4_purge_load_length}mm
 
 [gcode_macro SET_PURGE_LENGTH]
-variable_FILAMENT: 0
-variable_UNLOAD: 0
-variable_LOAD: 40
 gcode:
+    {% set FILAMENT = params.FILAMENT|default(0)|int %}
+    {% set UNLOAD = params.UNLOAD|default(0)|int %}
+    {% set LOAD = params.LOAD|default(40)|int %}
     M118 Set filament {FILAMENT} purge length {UNLOAD}/{LOAD}
     {%if FILAMENT|int == 0 %}
     SET_GCODE_VARIABLE MACRO=VAR_MMU2S VARIABLE=t0_purge_load_length VALUE={LOAD}
@@ -99,10 +99,10 @@ gcode:
     PURGE_STATUS
 
 [gcode_macro SET_PURGE_SPEED]
-variable_SPEED: 374
+variable_speed: 374
 gcode:
-    M118 Set purge speed at {SPEED} mm/min
-    SET_GCODE_VARIABLE MACRO=VAR_MMU2S VARIABLE=purge_speed VALUE={SPEED}
+    M118 Set purge speed at {speed} mm/min
+    SET_GCODE_VARIABLE MACRO=VAR_MMU2S VARIABLE=purge_speed VALUE={speed}
 
 ###############################
 #
@@ -394,20 +394,20 @@ gcode:
     SET_GCODE_VARIABLE  MACRO=DEPLOY_PURGE VARIABLE=z_lifted VALUE=-1
 
 [gcode_macro MOVE_PURGE_FILAMENT]
-variable_PURGE_LENGTH: 60
-variable_PURGE_MAX: 60
+variable_purge_length: 60
+variable_purge_max: 60
 gcode:
     {% if printer["gcode_macro VAR_MMU2S"].enable_purge_servo == 1 %}
-    M118 Purging : {PURGE_LENGTH|int} mm
+    M118 Purging : {purge_length|int} mm
     G91
     G92 E0
-    {% for i in range(PURGE_LENGTH|int//PURGE_MAX|int) %}
-        G1 E{PURGE_MAX} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
+    {% for i in range(purge_length|int//purge_max|int) %}
+        G1 E{purge_max} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
         M400
         G4 P2000
         G92 E0
     {% endfor %}
-    G1 E{PURGE_LENGTH|int%PURGE_MAX|int} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
+    G1 E{purge_length|int%purge_max|int} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
     M400
     G4 P2000
     G92 E0
@@ -470,7 +470,7 @@ gcode:
             RESET_FILAMENT_LENGTH_SENSOR
         {% endif %}
         {% if printer["gcode_macro VAR_MMU2S"].enable_purge_servo == 1 %}
-            MOVE_PURGE_FILAMENT PURGE_LENGTH={purge_length}
+            MOVE_PURGE_FILAMENT purge_length={purge_length}
         {% else %}
             G1 E{purge_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
         {% endif %}
