--- a/blv/printer-mmu2s-board.cfg
+++ b/blv/printer-mmu2s-board.cfg
@@ -20,7 +20,6 @@ default_type: command
 # E4 : MMU2S 5mm road with the 5 gears
 [tmc2209 manual_stepper gear_stepper]
 uart_pin: PD10 
-microsteps: 16
 run_current: 1.000
 hold_current: 0.600
 interpolate: True
@@ -34,7 +33,9 @@ enable_pin: !PG2
 # 140 : mk8 gear
 #step_distance: .007142
 # 165 : fystec gear for mmu2s
-step_distance: .00606
+#step_distance: .00606
+microsteps: 16
+rotation_distance: 19.392
 velocity: 40
 accel: 1500 # same value that your printer accel
 
@@ -42,7 +43,6 @@ accel: 1500 # same value that your printer accel
 # E5 : MMU2S idler with the 5 ball bearings
 [tmc2209 manual_stepper idler_stepper]
 uart_pin: PB12
-microsteps: 16
 run_current: 0.800
 hold_current: 0.800
 interpolate: True
@@ -57,7 +57,9 @@ step_pin: PD12
 dir_pin: !PD8
 enable_pin: !PD9
 # 25 step/mm
-step_distance: .04
+#step_distance: .04
+microsteps: 16
+rotation_distance: 128
 velocity: 100
 accel: 500
 # comment this two line if you don't use sensorless
