--- a/blv/printer-mmu2s-config.cfg
+++ b/blv/printer-mmu2s-config.cfg
@@ -29,12 +29,12 @@
 # 
 #
 ################################
-[gcode_macro VAR_MMU2S]
+[gcode_macro _VAR_MMU2S]
 variable_tmc2209_sensorless: 1
 variable_timeout_pause: 36000
 variable_disable_heater: 600
 variable_bowden_load_length1: 0
-variable_bowden_load_length2: 70
+variable_bowden_load_length2: 90
 variable_bowden_unload_length: 20
 variable_pinda_load_length: 100
 variable_pinda_unload_length: 15
@@ -83,3 +83,18 @@ gcode:
 #  PARAMETER TO ADAPT TO YOUR SETUP
 #
 ################################
+
+[gcode_macro _MMU_MANUAL_STEPPER]
+gcode:
+    {%set p=[] %}
+    {% for key in params %}
+        {% set p = p.append(key + '=' + params[key])  %}
+    {% endfor %}
+    {% if printer["gcode_macro _VAR_MMU2S"].btt_mmu == 1 %}
+#       M400
+        MMU_MOVE_STEPPER { p|join(" ") }
+#       M400
+   {% else %}
+        MANUAL_STEPPER { p|join(" ") }
+   {% endif %}
+
