--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -18,14 +18,14 @@ sensor_type: temperature_host
 #   TOUCH'MI           #
 #                      #
 ########################
-[gcode_macro MOVE_Z_UP]
+[gcode_macro _MOVE_Z_UP]
 variable_upz: 0
 gcode:
     {% if upz == 0 %}
 	SET_KINEMATIC_POSITION Z=0
 	G90
-        G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
-	SET_GCODE_VARIABLE MACRO=MOVE_Z_UP VARIABLE=upz VALUE=1
+        G1 Z{printer["gcode_macro _VARS_PRINTER"].touchmi_z_height|int} F300
+	SET_GCODE_VARIABLE MACRO=_MOVE_Z_UP VARIABLE=upz VALUE=1
     {% endif %}
 
 [gcode_macro G28]
@@ -35,14 +35,14 @@ gcode:
     {% set do_y = 0 %}
     {% set do_z = 0 %}
     {% if params.X is defined %}
-         MOVE_Z_UP
-         HOME_X
+         _MOVE_Z_UP
+         _HOME_X
     {% else %}
         {% set do_x = 1 %} 
     {% endif %}
     {% if params.Y is defined %}
-         MOVE_Z_UP
-         HOME_Y
+         _MOVE_Z_UP
+         _HOME_Y
     {% else %}
          {% set do_y = 1 %} 
     {% endif %}
@@ -52,11 +52,11 @@ gcode:
         {% set do_z = 1 %} 
     {% endif %}
     {% if do_x == 1 and do_y == 1 and do_z == 1 %}
-         MOVE_Z_UP
+         _MOVE_Z_UP
          HOME_ALL
     {% endif %}
 
-[gcode_macro HOME_X]
+[gcode_macro _HOME_X]
 gcode:
     #SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
     #SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
@@ -73,7 +73,7 @@ gcode:
     G1 X-30 F2000
     {% endif %}
 
-[gcode_macro HOME_Y]
+[gcode_macro _HOME_Y]
 gcode:
     #SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
     #SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
@@ -96,51 +96,51 @@ axes: z
 gcode:
     G90
     {% if not 'xy' in printer.toolhead.homed_axes %}
-    HOME_X 
-    HOME_Y
+    _HOME_X 
+    _HOME_Y
     {% endif %}
     G90
-    G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
-    DEPLOY_TOUCHMI
-    GO_TO_CENTER
+    G1 Z{printer["gcode_macro _VARS_PRINTER"].touchmi_z_height|int} F300
+    _DEPLOY_TOUCHMI
+    _GO_TO_CENTER
     G999928 Z0
-    G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
+    G1 Z{printer["gcode_macro _VARS_PRINTER"].touchmi_z_height|int} F300
 
-[gcode_macro GO_TO_CENTER]
+[gcode_macro _GO_TO_CENTER]
 gcode:
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_center_pos|int}  Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_center_pos|int} F3600
+    G1 X{printer["gcode_macro _VARS_PRINTER"].touchmi_x_center_pos|int}  Y{printer["gcode_macro _VARS_PRINTER"].touchmi_y_center_pos|int} F3600
 
-[gcode_macro DEPLOY_TOUCHMI]
+[gcode_macro _DEPLOY_TOUCHMI]
 gcode:
-    {% if printer["gcode_macro RETRACT_TOUCHMI"].touchmi_retracted|int == 1 %}
-    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=0
+    {% if printer["gcode_macro _RETRACT_TOUCHMI"].touchmi_retracted|int == 1 %}
+    SET_GCODE_VARIABLE MACRO=_RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=0
         {% if not 'xy' in printer.toolhead.homed_axes %}
-        HOME_X 
-        HOME_Y
+        _HOME_X 
+        _HOME_Y
         {% endif %}
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
-    G1 Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_pos|int} F3600
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int} F3600
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
+    G1 X{printer["gcode_macro _VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
+    G1 Y{printer["gcode_macro _VARS_PRINTER"].touchmi_y_pos|int} F3600
+    G1 X{printer["gcode_macro _VARS_PRINTER"].touchmi_x_pos|int} F3600
+    G1 X{printer["gcode_macro _VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
     M400
     {% endif %}
 
-[gcode_macro RETRACT_TOUCHMI]
+[gcode_macro _RETRACT_TOUCHMI]
 variable_touchmi_retracted: 1
 gcode:
-    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
+    SET_GCODE_VARIABLE MACRO=_RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
     G90
     G1 Z0 F300
     G1 Z10 F300
 
-[gcode_macro MZ_TILT_ADJUST]
+[gcode_macro _MZ_TILT_ADJUST]
 gcode:
-    {% if printer["gcode_macro VARS_PRINTER"].enable_z_tilt|int == 1 %}
+    {% if printer["gcode_macro _VARS_PRINTER"].enable_z_tilt|int == 1 %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
-    DEPLOY_TOUCHMI
+    _DEPLOY_TOUCHMI
     Z_TILT_ADJUST
     {% endif %}
 
@@ -150,30 +150,30 @@ gcode:
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
-    MZ_TILT_ADJUST
+    _MZ_TILT_ADJUST
     OLDBED_MESH_CALIBRATE
-    RETRACT_TOUCHMI
+    _RETRACT_TOUCHMI
 
 [gcode_macro G29]
 gcode:
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
-    DEPLOY_TOUCHMI
-    GO_TO_CENTER
+    _DEPLOY_TOUCHMI
+    _GO_TO_CENTER
     BED_MESH_CALIBRATE
-    RETRACT_TOUCHMI
+    _RETRACT_TOUCHMI
 
 [gcode_macro HOME_ALL]
 gcode:
-    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
-    HOME_X
-    HOME_Y
-    DEPLOY_TOUCHMI
+    SET_GCODE_VARIABLE MACRO=_RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
+    _HOME_X
+    _HOME_Y
+    _DEPLOY_TOUCHMI
     G999928 Z0
-    MZ_TILT_ADJUST
+    _MZ_TILT_ADJUST
     G999928 Z0
-    RETRACT_TOUCHMI
+    _RETRACT_TOUCHMI
 
 ########################
 #
@@ -188,7 +188,7 @@ gcode:
     {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
     {% set LOAD = params.LOAD|default(-1)|int %}
-    {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int ==1 %}
+    {% if printer["gcode_macro _VARS_PRINTER"].enable_servo|int ==1 %}
     SET_SERVO SERVO=purge_servo angle=0
     {% endif %}
     # metric values
@@ -214,15 +214,15 @@ gcode:
     # Set and wait for nozzle to reach temperature
     M109 S{EXTRUDER_TEMP}
     # Load filament into MMU
-    {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int == 1 %}
+    {% if printer["gcode_macro _VARS_PRINTER"].enable_mmu|int == 1 %}
     HOME_MMU
     M109 S{EXTRUDER_TEMP}
-    GO_TO_PARKING
+    _GO_TO_PARKING
     # zero the extruded length
     G92 E0
     {% if LOAD|int != -1 %}
-        {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int == 1 %}
-            DEPLOY_PURGE
+        {% if printer["gcode_macro _VARS_PRINTER"].enable_servo|int == 1 %}
+            _DEPLOY_PURGE
         {% endif %}
         {% if LOAD|int == 0 %}
             T0
@@ -241,20 +241,20 @@ gcode:
         {% endif %}
         M400
         G92 E0
-        {% if printer["gcode_macro VARS_PRINTER"].enable_servo|int == 1 %}
-            RETRACT_PURGE
+        {% if printer["gcode_macro _VARS_PRINTER"].enable_servo|int == 1 %}
+            _RETRACT_PURGE
         {% endif %}
     {% endif %}
-    GO_TO_PARKING_OUT
+    _GO_TO_PARKING_OUT
     {% endif %}
-    # clean nozzle
-    clean
+    # _clean nozzle
+    _clean
     # zero the extruded length
     G92 E0
     # start printing
     G1 F9000
     M117 ->> Printing <--
-    bip
+    _bip
 
 [gcode_macro END_PRINT]
 gcode:
@@ -270,18 +270,18 @@ gcode:
     G1 Z+5 E-2 F9000 
     G90
     G1 X10 Y10 F9000
-    {% if printer["gcode_macro VARS_PRINTER"].enable_mmu|int ==1 %}
+    {% if printer["gcode_macro _VARS_PRINTER"].enable_mmu|int ==1 %}
     M702
-    GO_TO_PARKING_OUT
+    _GO_TO_PARKING_OUT
     {% endif %}
     G90
     # the bed to move to the front
-    G1 X{printer["gcode_macro VARS_PRINTER"].end_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].end_y_pos|int} F9000
+    G1 X{printer["gcode_macro _VARS_PRINTER"].end_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].end_y_pos|int} F9000
     # Disable steppers
     M84
     # extruder fan off
     M107
-    bip
+    _bip
 
 
 ########################
@@ -290,18 +290,18 @@ gcode:
 #
 ########################
 
-[gcode_macro bip]
+[gcode_macro _bip]
 gcode:
     SET_PIN PIN=beeper VALUE=1
     G4 P1000 ; wait 1 s
     SET_PIN PIN=beeper VALUE=0
 
-[gcode_macro clean]
+[gcode_macro _clean]
 gcode:
-    {% if printer["gcode_macro VARS_PRINTER"].enable_clean_nozzle|int ==1 %}
+    {% if printer["gcode_macro _VARS_PRINTER"].enable_clean_nozzle|int ==1 %}
     G90
     G1 Z10
-    G1 X{printer["gcode_macro VARS_PRINTER"].clean_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].clean_y_pos|int} F3000
+    G1 X{printer["gcode_macro _VARS_PRINTER"]._clean_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"]._clean_y_pos|int} F3000
     G1 Z-1
     G91
     G1 X7
@@ -338,11 +338,11 @@ gcode:
     G90
     G1 X{X} Y{Y} F3000
     G91
-    bip
+    _bip
     G4 P200
-    bip
+    _bip
     G4 P200
-    bip
+    _bip
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
 
 [gcode_macro M600]
@@ -354,44 +354,44 @@ gcode:
     G1 E-1 F2000
     G1 Z{Z}
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} F3000
-    EJECT_FILAMENT
-    bip
+    G1 X{printer["gcode_macro _VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].change_filament_y_pos|int} F3000
+    _EJECT_FILAMENT
+    _bip
     G4 P200
-    bip
+    _bip
     G4 P200
-    bip
+    _bip
     G4 P10000
-    INSERT_FILAMENT 
+    _INSERT_FILAMENT 
     ; prime nozzle
     G1 E-0.8 F4500
     G1 E0.8 F4500
     G1 E0.8 F4500
     RESTORE_GCODE_STATE NAME=M600_state MOVE=1
 
-[gcode_macro EJECT_FILAMENT]
+[gcode_macro _EJECT_FILAMENT]
 gcode:
     {% set LENGTH_MAX = params.LENGTH_MAX|default(100)|int %}
     G91
     M83
-    bip
+    _bip
     G1 E+1 F4500
     G1 E+10 F540
     G1 E-20 F3000
     G4 P3000
-    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
+    {% for i in range(printer["gcode_macro _VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
     G1 E-{LENGTH_MAX} F200
     {% endfor %}
-    G1 E-{printer["gcode_macro VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
-    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
+    G1 E-{printer["gcode_macro _VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
+    {% for i in range(printer["gcode_macro _VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
     G1 E-{LENGTH_MAX} F3600
     {% endfor %}
-    G1 E-{printer["gcode_macro VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
-    bip
+    G1 E-{printer["gcode_macro _VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
+    _bip
     G4 P200
-    bip
+    _bip
     G4 P200
-    bip
+    _bip
     M82
     G90
 
@@ -400,28 +400,28 @@ gcode:
     {% set TEMP = params.TEMP|default(235)|float %}
     G28
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
+    G1 X{printer["gcode_macro _VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
     M109 S{TEMP} T0
-    EJECT_FILAMENT
+    _EJECT_FILAMENT
     M104 S0 T0
 
-[gcode_macro INSERT_FILAMENT]
+[gcode_macro _INSERT_FILAMENT]
 gcode:
     {% set LENGTH_MAX = params.LENGTH_MAX|default(100)|int %}
     G91
     M83
-    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
+    {% for i in range(printer["gcode_macro _VARS_PRINTER"].change_length_fast|int//LENGTH_MAX|int) %}
     G1 E{LENGTH_MAX} F3600
     {% endfor %}
-    G1 E{printer["gcode_macro VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
-    bip
-    {% for i in range(printer["gcode_macro VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
+    G1 E{printer["gcode_macro _VARS_PRINTER"].change_length_fast|int%LENGTH_MAX|int} F3600
+    _bip
+    {% for i in range(printer["gcode_macro _VARS_PRINTER"].change_length_slow|int//LENGTH_MAX|int) %}
     G1 E{LENGTH_MAX} F200
     {% endfor %}
-    G1 E{printer["gcode_macro VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
+    G1 E{printer["gcode_macro _VARS_PRINTER"].change_length_slow|int%LENGTH_MAX|int} F200
     G4 P1000
     G1 E+1 F600
-    bip
+    _bip
     M82
     G90
 
@@ -430,9 +430,9 @@ gcode:
     {% set TEMP = params.TEMP|default(235)|float %}
     G28
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
+    G1 X{printer["gcode_macro _VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].change_filament_y_pos|int} Z20 F3000
     M109 S{TEMP} T0
-    INSERT_FILAMENT
+    _INSERT_FILAMENT
     M104 S0 T0
 
 ##################################
@@ -444,9 +444,9 @@ gcode:
 ##################################
 [gcode_macro SPEED_TEST]
 gcode:
-    {% set SPEED = params.TEMP|default(2000)|int %}
-    HOME_X
-    HOME_Y
+    {% set SPEED = params.SPEED|default(2000)|int %}
+    _HOME_X
+    _HOME_Y
     G90
     {% for i in range(3) %}
     G1 X20 Y20  F{SPEED|int}
