--- a/printer-mainsail.cfg
+++ b/printer-mainsail.cfg
@@ -18,9 +18,10 @@ gcode:
     G91
     G1 Z{Z}
     G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro VARS_PRINTER"].change_filament_y_pos|int} F3000
+    G1 X{printer["gcode_macro _VARS_PRINTER"].change_filament_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].change_filament_y_pos|int} F3000
     CLEAR_PAUSE
     SDCARD_RESET_FILE
     BASE_CANCEL_PRINT
+
 
 
