--- a/vking/printer-mmu2s-config.cfg
+++ b/vking/printer-mmu2s-config.cfg
@@ -29,7 +29,7 @@
 #
 #
 ################################
-[gcode_macro VAR_MMU2S]
+[gcode_macro _VAR_MMU2S]
 variable_tmc2209_sensorless: 1
 variable_timeout_pause: 36000
 variable_disable_heater: 600
@@ -84,13 +84,13 @@ gcode:
 #
 ################################
 
-[gcode_macro MMU_MANUAL_STEPPER]
+[gcode_macro _MMU_MANUAL_STEPPER]
 gcode:
     {%set p=[] %}
     {% for key in params %}
         {% set p = p.append(key + '=' + params[key])  %}
     {% endfor %}
-    {% if printer["gcode_macro VAR_MMU2S"].btt_mmu == 1 %}
+    {% if printer["gcode_macro _VAR_MMU2S"].btt_mmu == 1 %}
 #       M400
         MMU_MOVE_STEPPER { p|join(" ") }
 #       M400
