--- a/btt-mmu/printer.cfg
+++ b/btt-mmu/printer.cfg
@@ -230,7 +230,7 @@ pin: EXP1_1
 # MACROS
 #
 ########################
-[gcode_macro VARS_PRINTER]
+[gcode_macro _VARS_PRINTER]
 variable_end_x_pos: 10
 variable_end_y_pos: 10
 variable_touchmi_x_pos: 375
