--- a/vam8-bowden/printer-mosquito.cfg
+++ b/vam8-bowden/printer-mosquito.cfg
@@ -353,7 +353,7 @@ screw_thread: CW-M3
 # MACROS
 #
 ########################
-[gcode_macro VARS_PRINTER]
+[gcode_macro _VARS_PRINTER]
 variable_end_x_pos: 10
 variable_end_y_pos: 210
 variable_touchmi_x_pos: 213
