--- a/vam8-bowden/printer-mosquito.cfg
+++ b/vam8-bowden/printer-mosquito.cfg
@@ -16,8 +16,9 @@ dir_pin: P0.11
 enable_pin: !P0.10
 #step_distance: .01
 #step_distance: .00625
-microsteps: 32
+microsteps: 64
 rotation_distance: 40
+full_steps_per_rotation: 400
 #endstop_pin: ^P1.24
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: -21
@@ -33,8 +34,9 @@ enable_pin: !P0.19
 #step_distance: .01
 #step_distance: .005
 #step_distance: .00625
-microsteps: 32
+microsteps: 64
 rotation_distance: 40
+full_steps_per_rotation: 400
 #endstop_pin: ^P1.26
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: -28
@@ -50,6 +52,7 @@ enable_pin: !P0.21
 #step_distance: .00125
 microsteps: 32
 rotation_distance: 8
+full_steps_per_rotation:200
 endstop_pin: probe:z_virtual_endstop
 position_min: -3
 position_max: 210
@@ -62,16 +65,17 @@ enable_pin: !P0.4
 #step_distance: .00125
 microsteps: 32
 rotation_distance: 8
+full_steps_per_rotation:200
 
 [tmc2209 stepper_x]
 uart_pin: P1.1
 run_current: 1.0
-hold_current: .6
-interpolate: True
+#hold_current: .6
+interpolate: False
 sense_resistor: 0.110
 driver_SGTHRS: 150
 diag_pin: ^P1.24
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 #driver_IHOLDDELAY: 8
 #driver_TPOWERDOWN: 0
 #driver_BLANK_TIME_SELECT: 1
@@ -103,12 +107,12 @@ stealthchop_threshold: 250
 [tmc2209 stepper_y]
 uart_pin: P1.4
 run_current: 1.0
-hold_current: .6
-interpolate: True
+#hold_current: .6
+interpolate: False
 sense_resistor: 0.110
 driver_SGTHRS: 150
 diag_pin: ^P1.26
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 #driver_TOFF: 4
 #driver_HEND: 2
 #driver_HSTRT: 1
@@ -117,10 +121,10 @@ stealthchop_threshold: 250
 uart_pin: P1.10
 #microsteps: 8
 run_current: .8
-hold_current: .8
-interpolate: True
+#hold_current: .8
+interpolate: False
 sense_resistor: 0.110
-#stealthchop_threshold: 50 
+stealthchop_threshold: 0#stealthchop_threshold: 50 
 #driver_TOFF: 4
 #driver_HEND: 2
 #driver_HSTRT: 1
@@ -129,9 +133,10 @@ sense_resistor: 0.110
 uart_pin: P1.14
 #microsteps: 8
 run_current: .8
-hold_current: .8
-interpolate: True
+#hold_current: .8
+interpolate: False
 sense_resistor: 0.110
+stealthchop_threshold: 0
 #stealthchop_threshold: 50 
 #driver_TOFF: 4
 #driver_HEND: 2
@@ -147,9 +152,10 @@ sense_resistor: 0.110
 uart_pin: P1.17
 #microsteps: 8
 run_current: 1.0
-hold_current: 0.8
-interpolate: True
+#hold_current: 0.8
+interpolate: False
 sense_resistor: 0.110
+stealthchop_threshold: 0
 #stealthchop_threshold: 50 
 #driver_TOFF: 4
 #driver_HEND: 2
@@ -171,7 +177,7 @@ enable_pin: !P4.29
 #step_distance: 0.00211416
 microsteps: 16
 rotation_distance: 6.765312
-nozzle_diameter: 0.800
+nozzle_diameter: 0.4
 filament_diameter: 1.750
 max_extrude_only_distance: 150.0
 heater_pin: P2.5
