--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -301,7 +301,7 @@ gcode:
     {% if printer["gcode_macro _VARS_PRINTER"].enable_clean_nozzle|int ==1 %}
     G90
     G1 Z10
-    G1 X{printer["gcode_macro _VARS_PRINTER"]._clean_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"]._clean_y_pos|int} F3000
+    G1 X{printer["gcode_macro _VARS_PRINTER"].clean_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].clean_y_pos|int} F3000
     G1 Z-1
     G91
     G1 X7
