--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -17,7 +17,10 @@ step_pin: P2.1
 dir_pin: P0.11
 enable_pin: !P0.10
 #step_distance: .01
-step_distance: .00625
+#step_distance: .00625
+microsteps: 64
+rotation_distance: 40
+full_steps_per_rotation: 200
 #endstop_pin: ^P1.24
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: -21
@@ -30,9 +33,10 @@ homing_retract_dist: 0
 step_pin: P2.2
 dir_pin: !P0.20
 enable_pin: !P0.19
-#step_distance: .01
-#step_distance: .005
-step_distance: .00625
+#step_distance: .00625
+microsteps: 64
+rotation_distance: 40
+full_steps_per_rotation: 200
 #endstop_pin: ^P1.26
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: -28
@@ -45,7 +49,10 @@ homing_retract_dist: 0
 step_pin: P2.3
 dir_pin: P0.22
 enable_pin: !P0.21
-step_distance: .00125
+#step_distance: .00125
+microsteps: 32
+rotation_distance: 8
+full_steps_per_rotation:200
 endstop_pin: probe:z_virtual_endstop
 position_min: -3
 position_max: 210
@@ -55,18 +62,20 @@ homing_speed: 5
 step_pin: P2.0
 dir_pin: !P0.5
 enable_pin: !P0.4
-step_distance: .00125
+#step_distance: .00125
+microsteps: 32
+rotation_distance: 8
+full_steps_per_rotation:200
 
 [tmc2209 stepper_x]
 uart_pin: P1.1
-microsteps: 32
 run_current: 1.0
-hold_current: .6
-interpolate: True
+#hold_current: .6
+interpolate: False
 sense_resistor: 0.110
 driver_SGTHRS: 150
 diag_pin: ^P1.24
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 #driver_IHOLDDELAY: 8
 #driver_TPOWERDOWN: 0
 #driver_BLANK_TIME_SELECT: 1
@@ -97,14 +106,13 @@ stealthchop_threshold: 250
 
 [tmc2209 stepper_y]
 uart_pin: P1.4
-microsteps: 32
 run_current: 1.0
-hold_current: .6
-interpolate: True
+#hold_current: .6
+interpolate: False
 sense_resistor: 0.110
 driver_SGTHRS: 150
 diag_pin: ^P1.26
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 #driver_TOFF: 4
 #driver_HEND: 2
 #driver_HSTRT: 1
@@ -112,11 +120,11 @@ stealthchop_threshold: 250
 [tmc2208 stepper_z]
 uart_pin: P1.10
 #microsteps: 8
-microsteps: 32
 run_current: .8
-hold_current: .8
-interpolate: True
+#hold_current: .8
+interpolate: False
 sense_resistor: 0.110
+stealthchop_threshold: 0
 #stealthchop_threshold: 50 
 #driver_TOFF: 4
 #driver_HEND: 2
@@ -125,11 +133,11 @@ sense_resistor: 0.110
 [tmc2208 stepper_z1]
 uart_pin: P1.14
 #microsteps: 8
-microsteps: 32
 run_current: .8
-hold_current: .8
-interpolate: True
+#hold_current: .8
+interpolate: False
 sense_resistor: 0.110
+stealthchop_threshold: 0
 #stealthchop_threshold: 50 
 #driver_TOFF: 4
 #driver_HEND: 2
@@ -144,10 +152,9 @@ sense_resistor: 0.110
 [tmc2209 extruder]
 uart_pin: P1.17
 #microsteps: 8
-microsteps: 16
 run_current: 1.0
-hold_current: 0.8
-interpolate: True
+#hold_current: 0.8
+interpolate: False
 sense_resistor: 0.110
 #stealthchop_threshold: 50 
 #driver_TOFF: 4
@@ -167,16 +174,14 @@ sense_resistor: 0.110
 step_pin: P2.8
 dir_pin: P2.13
 enable_pin: !P4.29
-#step_distance: .0022
-#step_distance: .0024
-#step_distance: .0012
-step_distance: 0.00211416
-#step_distance: 0.00422832
-nozzle_diameter: 0.800
+#step_distance: 0.00211416
+microsteps: 16
+rotation_distance: 6.765312
+nozzle_diameter: 0.8
 filament_diameter: 1.750
 max_extrude_only_distance: 150.0
 heater_pin: P2.5
-sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 #sensor_type: ATC Semitec 104GT-2
 #sensor_type: dyze500
 sensor_pin: P0.23
@@ -276,7 +281,7 @@ click_pin: ^!P2.11
 kill_pin: ^!P1.22
 
 [virtual_sdcard]
-path: ~/.octoprint/uploads/
+path: ~/gcode_files
 
 [firmware_retraction]
 retract_length: 2.80
@@ -307,7 +312,7 @@ value: 0
 pin: P1.29
 x_offset: 49
 y_offset: 25
-z_offset: 3.80
+z_offset: 2.60
 
 [bed_mesh]
 speed: 100
@@ -354,7 +359,7 @@ screw_thread: CW-M3
 ########################
 [gcode_macro _VARS_PRINTER]
 variable_end_x_pos: 10
-variable_end_y_pos: 210
+variable_end_y_pos: 180
 variable_touchmi_x_pos: 213
 variable_touchmi_y_pos: 0
 variable_touchmi_x_center_pos: 68
@@ -364,7 +369,7 @@ variable_enable_mmu: 0
 variable_enable_servo: 0
 variable_enable_z_tilt: 1
 variable_enable_clean_nozzle: 1
-variable_clean_x_pos: -14 
+variable_clean_x_pos: -14
 variable_clean_y_pos: 81
 variable_change_filament_x_pos: 10 
 variable_change_filament_y_pos: 10
@@ -373,6 +378,7 @@ variable_change_length_fast: 600
 gcode:
 
 [include  printer-macros.cfg]
+[include printer-mainsail.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
