--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -159,12 +159,14 @@ gcode:
 [gcode_macro _GO_TO_PARKING]
 gcode:
     G90
-    G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} Y{printer["gcode_macro _VAR_MMU2S"].pause_y} F3000
+    G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} F3000
+    G1 Y{printer["gcode_macro _VAR_MMU2S"].pause_y} F3000
 
 [gcode_macro _GO_TO_PARKING_OUT]
 gcode:
     G91
-    G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x_out} Y{printer["gcode_macro _VAR_MMU2S"].pause_y_out} F3000
+    G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x_out} F3000
+    G1 Y{printer["gcode_macro _VAR_MMU2S"].pause_y_out} F3000
     G90
 
 # Pause the MMU, park the extruder at the parking position
